<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddContactActivity">

    <TextView
        android:id="@+id/textFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/all_tv_firstname"
        android:textSize="40px" />

    <EditText
        android:id="@+id/EditTextFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textFirstName"
        android:inputType="text" />

    <TextView
        android:id="@+id/textLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/EditTextFirstName"
        android:text="@string/all_tv_lastname"
        android:textSize="40px" />

    <EditText
        android:id="@+id/contactLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textLastName"
        android:inputType="text" />

    <TextView
        android:id="@+id/textPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/contactLastName"
        android:text="@string/all_tv_phone"
        android:textSize="40px" />

    <EditText
        android:id="@+id/phoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textPhoneNumber"
        android:inputType="phone" />

    <TextView
        android:id="@+id/textEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phoneNumber"
        android:text="@string/all_tv_email"
        android:textSize="40px" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textEmail"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/accept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:text="@string/activity_add_contacts_btn_add" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_marginLeft="185dp"
        android:layout_toRightOf="@+id/accept"
        android:text="@string/activity_add_contacts_btn_cancel" />


</RelativeLayout>