<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/appName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="55px" />

    <TextView
        android:id="@+id/appAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appName"
        android:layout_marginTop="70dp"
        android:text="@string/activity_main_tv_author"
        android:textAlignment="center"
        android:textSize="40px" />


    <TextView
        android:id="@+id/appVersion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appAuthor"
        android:layout_marginTop="70dp"
        android:text="@string/activity_main_tv_version"
        android:textAlignment="center"
        android:textSize="40px"

        />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appVersion"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:layout_weight="1"
        android:text="@string/activity_main_btn_contacts" />

</RelativeLayout>